# pure-txt-trie

./: README.md  default.nix  pure-txt-trie.cabal
bench/: Bench.hs
src/Pure/Data/Txt/: Trie.hs
test/: Test.hs
