name:                pure-txt-trie
version:             0.7.0.0
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Pure.Data.Txt.Trie

  build-depends:
    base >= 4.8 && < 5,
    pure-txt >= 0.7 && < 1,
    pure-json >= 0.7 && < 1,
    containers,
    deepseq

  hs-source-dirs:      src

  default-language:    Haskell2010
