name:                pure-txt-trie
version:             0.8.0.0
homepage:            purehs.org/doc/pure-txt-trie
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-txt-trie.git

library
  exposed-modules:
    Pure.Data.Txt.Trie

  build-depends:
    base,
    pure-txt,
    pure-json,
    containers,
    deepseq

  hs-source-dirs:      src

  default-language:    Haskell2010
